Add DatabaseConnectionManager, edit DAO and service